@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- The Screen output now enables autoflush on the handle it uses to send output
+  to STDOUT or STDERR every time it sends a message. This does not affect the
+  global STDOUT or STDERR, as the Screen module makes its own handle for
+  output. This fixes a bug reported by Karen Etheridge that caused this module
+  to not play nicely with Capture::Tiny in some cases. RT #106605.
+
+
 2.48     2015-08-07
 
 - Fixed (I hope) tests that were added in the last release that fail on
